--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,6 +6,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
+        with:
+          distribution: adopt
       - uses: android-actions/setup-android@v2
       - uses: actions/setup-go@v4
       - run: |
