--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,5 +13,6 @@ jobs:
       - uses: actions/setup-go@v4
       - run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
+          go get golang.org/x/mobile/bind
           gomobile init
           go run ./cmd/internal/build_libbox
