--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,5 +1,7 @@
 name: android
 on: [push]
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,6 +19,10 @@ jobs:
           go get golang.org/x/mobile/bind
           gomobile init
           go run ./cmd/internal/build_libbox
-      - uses: softprops/action-gh-release@v1
+      - uses: marvinpinto/action-automatic-releases@latest
         with:
-          files: libbox.aar
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          files: |
+            libbox.aar
